# opensourcetest

./: .gitignore  404.html  README.md  dockerfile  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
changelog/: index.html
docs/: CHAME  changelog.md  index.md  installation.md  sponsors.md
docs/appuserguide/: run_testcase.md  scaffold.md  testing_report.md  write_testcase.md
docs/httpuserguide/: ost_plugin.md  ost_source.md  run_testcase.md  scaffold.md  testing_report.md  write_testcase.md
docs/uiuserguide/: ost_plugin.md  ost_source.md  run_testcase.md  scaffold.md  testing_report.md  write_testcase.md
docs/userguide/: ost_plugin.md  scaffold.md  write_testcase.md
installation/: index.html
opensourcetest/: __init__.py  __main__.py  cli.py  scaffold.py
opensourcetest/appmodel/: .gitignore  __init__.py  conftest.py  pytest.ini  readme.md  requirements.txt  run.py
opensourcetest/appmodel/ActivityObject/: elemParams.py  yamlChoice.py
opensourcetest/appmodel/ActivityObject/Login_activity/: Login_activity.yaml  (+2 more)
opensourcetest/appmodel/Base/: assertMethod.py  base.py  baseBy.py
opensourcetest/appmodel/Common/: fileOption.py  publicMethod.py
opensourcetest/appmodel/Conf/: __init__.py  config.yaml
opensourcetest/banner/: banner_top.txt
opensourcetest/builtin/: __init__.py  assertChecker.py  assertScreenShot.py  autoParamInjection.py  baseAppRunner.py  baseRequest.py  baseUiRunner.py  check.py  exceptions.py  locate.py  models.py  ostDriver.py  ostHttp.py
opensourcetest/common/: __init__.py  comFileOperation.py  comFileOption.py  consolelog.py  dockerOperation.py  pictureOperation.py  urlOperation.py  yamlOperation.py
opensourcetest/httpmodel/: .gitignore  conftest.py  pytest.ini  requirements.txt  run.py
opensourcetest/httpmodel/Base/: baseAssert.py  requestEngine.py
opensourcetest/httpmodel/Conf/: conf.yml
opensourcetest/httpmodel/Parameter/: yamlChoice.py
opensourcetest/httpmodel/TestCases/: test_login.py
opensourcetest/interface/: __init__.py  assertServer.py
opensourcetest/model/: .gitignore  README.md  __init__.py  conftest.py  pytest.ini  requirements.txt  run.py
opensourcetest/model/Base/: baseAssert.py  baseRequest.py  requestEngine.py
opensourcetest/model/Common/: __init__.py
opensourcetest/model/Conf/: conf.yml
opensourcetest/model/Parameter/: __init__.py  yamlChoice.py
opensourcetest/model/TestCases/: __init__.py  test_login.py
opensourcetest/models/: __init__.py  consolelog.py  models.py
opensourcetest/ost_util/LocalSeleniumServer/: selenium_server_hub.bat  selenium_server_node1.bat  selenium_server_node2.bat  selenium_server_node3.bat
opensourcetest/ost_util/LocalSeleniumStartScript/: run_by_chrome.bat
opensourcetest/uimodel/: .gitignore  __init__.py  conftest.py  main.py  pytest.ini  readme.md  requirements.txt  run.py  start_run_all_browser.bat
opensourcetest/uimodel/Base/: assertMethod.py  base.py
opensourcetest/uimodel/Common/: fileOperation.py  fileOption.py  publicMethod.py  stringOperation.py
opensourcetest/uimodel/Conf/: __init__.py  config.yaml  selenium_config.yaml
opensourcetest/uimodel/LocalSeleniumServer/: start_server_windows.bat
opensourcetest/uimodel/PageObject/: loginPage.py  registerPage.py  yamlChoice.py
opensourcetest/uimodel/TestCases/: __init__.py  conftest.py
search/: search_index.json
sponsors/: index.html
tests/: cli_test.py  test_opensourcetest.py
userguide/run_testcase/: index.html
userguide/scaffold/: index.html
userguide/testing_report/: index.html
userguide/write_testcase/: index.html
(+33 files in other folders)
